# spl-compiler

./: .gitignore  LICENSE.md  README.md  spl-compiler.cabal  stack.yaml
app/: Main.hs
example-programs/: concat.spl  fac.spl  fib.spl  helloworld.spl  last.spl  length.spl  performance_test_parentheses.spl  precedence-assoc.spl  precedence_assoc.spl  precedence_parentheses.spl  scopes.spl  tct.spl  tctannotated.spl  tctfields.spl  tctfuntype.spl  tcthard.spl  tctidentity.spl  tctpoly.spl  tctpolyrecursive.spl  tctpolyreturn.spl  tctpolyscope.spl  tctpolywithinfun.spl  tctreturns.spl  tctstatements.spl  tctstress.spl  tctweird.spl  test_annotation.spl  test_args_and_locals.spl  test_casts.spl  test_class_poly.spl  test_classes.spl  test_dynamic.spl  test_fields.spl  test_fields_assign.spl  test_globals.spl  test_globals_simple.spl  test_hof2.spl  test_last_ptr.spl  test_list.spl  test_malloc.spl  (+11 more)
src/: Lib.hs
src/CodeGenerator/: SSM.hs
src/Data/: AST.hs  DFA.hs  NFA - Copy.hs  NFA.hs  Pos.hs  Stack.hs  Token.hs  Type.hs
src/Lexer/: Lexer.hs
src/Parser/: Parser.hs  SPLParser.hs
src/Text/Regex/: Thompson.hs
src/TypeSystem/: Checker.hs
stdlib/: buddyallocator.spl  std.spl  stdbuddyallocator.spl  stdmath.spl  stdsmartpointers.spl  stdstring.spl
test/: Test.hs
test/Lexer/: LexerTest.hs
test/Parser/: SPLParserTest.hs
test/Text/Regex/: ThompsonTest.hs
test/TypeSystem/: CheckerTest.hs
